--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 
   <!-- Changes this to your bot's name -->
-  <title>Discord Bot Website Template</title>
+  <title>Pumpkin Treater</title>
 
   <!-- Change the content attribute's value to your bot's description -->
   <meta name="description" content="An opensource discord bot website template that you can use to make your bot seem more professional!">
@@ -50,18 +50,13 @@
       <img src="images/discordUI.png" class="max-w-xs md:max-w-5xl noselect pointer-events-none" />
       <div class="flex flex-col items-center justify-center noselect">
         <div class="flex flex-col items-center text-4xl mb-4">
-          <span class="font-montserrat font-black">200+</span>
+          <span class="font-montserrat font-black">14</span>
           <span class="font-montserrat font-black">SERVERS</span>
         </div>
         <div class="flex flex-col items-center text-4xl my-4">
           <span class="font-montserrat font-black">14500+</span>
           <span class="font-montserrat font-black">USERS</span>
         </div>
-        <div class="flex flex-col items-center text-4xl mt-4">
-          <span class="font-montserrat font-black">2300+</span>
-          <span class="font-montserrat font-black">CHANNELS</span>
-        </div>
-      </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#7289DA" fill-opacity="1" d="M0,224L48,240C96,256,192,288,288,304C384,320,480,320,576,288C672,256,768,192,864,138.7C960,85,1056,43,1152,48C1248,53,1344,107,1392,133.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
     <div class="flex flex-row items-center justify-center mb-10">
