--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="commands.html" class="mx-4 text-xl hover:text-blurple hidden md:inline">Commands</a>
     </div>
     <div class="right mr-10 md:mr-20">
-      <a href="https://discord.com/api/oauth2/authorize?client_id=738073521275535473&permissions=8&redirect_uri=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D-CbxUk8QX9M&scope=bot" target="_blank" class="px-8 py-3 whitespace-no-wrap bg-blurple text-white rounded-lg text-xl font-semibold hover:bg-beautyPurple"><i class="fab fa-discord mr-1"></i> Invite</a>
+      <a href="https://discord.com/api/oauth2/authorize?client_id=738073521275535473&permissions=8&scope=bot" target="_blank" class="px-8 py-3 whitespace-no-wrap bg-blurple text-white rounded-lg text-xl font-semibold hover:bg-beautyPurple"><i class="fab fa-discord mr-1"></i> Invite</a>
     </div>
   </nav>
 
